fix carousel overflowing in mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ $cool-shadow: 0 0 5px rgba(0, 0, 0, 0.502);
 
 :root {
   --main-bg-color: red;
-  --universal-y-padding: 8rem;
+  --universal-y-padding: 4rem;
   --universal-x-padding: 2rem;
   --header-height: 0px;
 }
@@ -24,8 +24,7 @@ body {
 main > section {
   padding-bottom: var(--universal-y-padding);
   padding-top: var(--universal-y-padding);
-  padding-left: var(--universal-x-padding);
-  padding-right: var(--universal-x-padding);
+
   & > .content {
     margin: auto;
     max-width: 1200px;
@@ -36,7 +35,7 @@ main > section {
     gap: 3rem;
     & > h1 {
       color: white;
-      padding: 0rem 1rem;
+      padding: 0rem var(--universal-x-padding);
       text-transform: uppercase;
       font-size: 2rem;
     }
@@ -82,7 +81,6 @@ section.home {
 }
 
 section.details {
-  padding: 0;
   display: flex;
   align-items: center;
   min-height: calc(100svh - var(--header-height));
